--- a/compress-img/index.html
+++ b/compress-img/index.html
@@ -10,7 +10,7 @@
         <div>
             <img id="preview" src="" alt="" />
         </div>
-        <!-- <script src="./index.js" type="module"></script> -->
+        <!-- <script src="./index.js"></script> -->
         <script type="module">
             import compressIMG from './index.js';
             const fileInput = document.getElementById('file-input');
